--- a/.github/workflows/integration-hf.yml
+++ b/.github/workflows/integration-hf.yml
@@ -31,11 +31,14 @@ jobs:
             create_proxy: "false"
 
     env:
-      HF_TEST_WORKSPACE: ${{ runner.temp }}/hf-space-action-tests
       HF_TEST_PREFIX: hf-space-action-test-
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set test workspace
+        run: |
+          echo "HF_TEST_WORKSPACE=${{ runner.temp }}/hf-space-action-tests" >> $GITHUB_ENV
 
       - uses: actions/setup-python@v5
         with:
@@ -119,7 +122,7 @@ jobs:
             --source-dir "${{ steps.prep.outputs.source_dir }}" \
             --commit-message "integration: sync" \
             --create-proxy "${{ matrix.create_proxy }}" \
-            --proxy-space-suffix "-proxy" \
+            --proxy-space-suffix '-proxy' \
             --proxy-hf-token "" \
             --proxy-target-url "" \
             --proxy-allow-origins "*"
