ci: fix argument syntax for proxy-space-suffix
Update the --proxy-space-suffix argument to use an equals sign for better compatibility with the argument parser in the integration-hf workflow.

--- a/.github/workflows/integration-hf.yml
+++ b/.github/workflows/integration-hf.yml
@@ -122,7 +122,7 @@ jobs:
             --source-dir "${{ steps.prep.outputs.source_dir }}" \
             --commit-message "integration: sync" \
             --create-proxy "${{ matrix.create_proxy }}" \
-            --proxy-space-suffix '-proxy' \
+            --proxy-space-suffix='-proxy' \
             --proxy-hf-token "" \
             --proxy-target-url "" \
             --proxy-allow-origins "*"
